[tool.poetry]
name = "oa"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

# [[tool.poetry.source]]
# name = "douban"
# url = 'https://pypi.douban.com/simple/'

[tool.poetry.dependencies]
python = "^3.7"
Quart = "^0.8.1"
Flask-SQLAlchemy = "^2.3"
Flask-JWT-Extended = "^3.18"
flask-marshmallow = "^0.10.0"
marshmallow = "3.0.0rc5"
marshmallow-sqlalchemy = "^0.16.2"
marshmallow-enum = "^1.4"
fast-json = "^0.3.2"
Flask-Migrate = "^2.4"
flask-shell = "^0.1.3"
mysqlclient = "^1.4"
Quart-CORS = "^0.1.2"
arrow = "^0.13.1"
Marshmallow-Arrow = "^1.0"
sqlalchemy-pagination = "^0.0.2"
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
flask-shell-ipython = "^0.4.0"
pytest-sugar = "^0.9.2"
loguru = "^0.2.5"
better-exceptions-fork = "^0.2.1"
ipdb = "^0.12.0"
ipython = "^7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
